# notion-ticktick-connector

./: .coveragerc  .env.example  .flake8  .gitignore  LICENSE  README.md  config.py  lambda_function.py  main.py  pyproject.toml  requirements.txt  task_utilities.py
.github/workflows/: cd.yml
constants/: regex_patterns.py  task_data.py  task_status.py
controllers/: notion_api.py  notion_controller.py  task_syncer.py  ticktick_api.py  ticktick_controller.py
data/: habit_list.py  habit_notion_parameters.py  list_ticktick_parameters.py  regex_patterns.py  task_data.py  task_notion_parameters.py  task_status.py  task_ticktick_parameters.py  ticktick_ids.py
data/payloads/: notion_payloads.py  ticktick_payloads.py
data/regular_expressions/: filter_tags.py
src/: s3_client.py  task_syncer.py
tests/: conftest.py  test_task_syncer.py
utilities/: habit_utilities.py  task_utilities.py
