[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/anggelomos/notion-ticktick-connector"

[tool.setuptools.package-data]
nothion = ["py.typed"]

[project]
name = "notion-ticktick-connector"
version = "0.3.0"
description = "Script that uses Notion's api and the unofficial Ticktick api to sync tasks between the two applications."
readme = "README.md"
authors = [{name = "anggelomos", email = "anggelomos@outlook.com"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "tickthon",
    "nothion",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"
ruff = "^0.12.2"
mypy = "^1.16.1"
types-requests = "^2.32.4.20250611"
flake8-todos = "^0.3.1"
